--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -10,19 +10,28 @@ header {
     linear-gradient(to bottom, rgb(255, 255, 255), rgba(255, 255, 255, 0.8));
 }
 
+
+
 a {
   color: #25b3bc;
-  cursor: pointer;
   text-decoration: none;
+  
 }
 
-a:hover, 
-#posts > li.post > div.post-title {
+
+a:hover {
   color: #25b3bc;
   background-size: 100% 1px;
   background-repeat: repeat-x;
   background-position: 0 calc(100% - 1px);
   background-image: linear-gradient(to right, #25b3bc 100%, rgba(255, 255, 255, 0) 0%);
+}
+
+a.disable-decoration {
+  background-size: inherit;
+  background-repeat: inherit;
+  background-position: inherit;
+  background-image: inherit;
 }
 
 body {
@@ -60,11 +69,11 @@ input::placeholder {
 }
 
 #content {
-  max-width: calc(900px - (30px * 2));
+  max-width: calc(70rem - (2rem * 2));
   margin-right: auto;
   margin-left: auto;
-  padding-right: 30px;
-  padding-left: 30px;
+  padding-right: 2rem;
+  padding-left: 2rem;
   position: relative;
   min-height: 80vh;
 }
@@ -83,7 +92,7 @@ input::placeholder {
 }
 
 #posts > li.post > div.post-title {
-  font-size: 1.0rem;
+  font-size: 1.2rem;
   color: #25b3bc;
   cursor: pointer;
 }
@@ -92,7 +101,7 @@ input::placeholder {
   filter: brightness(85%);
 }
 
-#posts > li.post > div.separator{
+#posts > li.post > div.separator {
   display: inline;
 }
 
@@ -104,7 +113,7 @@ input::placeholder {
 }
 
 #posts > li.post > div.post-date {
-  font-size: 0.8rem;
+  font-size: 1rem;
   color: #AAA;
 }
 
@@ -113,8 +122,35 @@ input::placeholder {
 }
 
 #posts > li.post {
-  margin-bottom: 1rem;
+  padding-top: 0.8rem;
+  padding-bottom: 1rem;
 }
+
+#post-detail > div.post-tools {
+  position: absolute;
+  left: 100%;
+  top: 1rem;
+  margin-left: 2rem;
+  opacity: 0;
+}
+
+#post-detail > div.post-tools {
+  transition: 0.5s;
+  opacity: 1;
+}
+
+#post-detail > div.post-tools > a {
+  color: #25b3bc;
+  border: 1px solid #25b3bc;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 0.5rem;
+}
+
+#post-detail > div.post-tools > a:not(:last-child) {
+  margin-right: 1rem;
+}
+
 
 /* ul.posts > li.post:before {
   content: "§";
@@ -126,7 +162,7 @@ input::placeholder {
 
 div.tags > div.tag {
   display: inline-block;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   line-height: 1.3rem;
   color: #25b3bc;
   cursor: pointer;
@@ -134,7 +170,7 @@ div.tags > div.tag {
 
 div.tags > div.tag::before {
   content: "■";
-  font-size: 0.4rem;
+  font-size: 0.6rem;
   top: -0.2rem;
   margin-right: 0.2rem;
   opacity: 0;
@@ -313,6 +349,7 @@ div.tags > div.tag:not(:last-child) {
   box-shadow: none;
   width: 100%;
   outline: none;
+  position: relative;
 }
 
 #create-post label {
@@ -370,7 +407,7 @@ div.tags > div.tag:not(:last-child) {
 
 #post-detail > #post-tags > li::before {
   content: "■";
-  font-size: 0.4rem;
+  font-size: 0.6rem;
   top: -0.2rem;
   margin-right: 0.2rem;
   opacity: 0;
