--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -10,14 +10,11 @@ header {
     linear-gradient(to bottom, rgb(255, 255, 255), rgba(255, 255, 255, 0.8));
 }
 
-
-
 a {
   color: #25b3bc;
   text-decoration: none;
   
 }
-
 
 a:hover {
   color: #25b3bc;
@@ -122,7 +119,6 @@ input::placeholder {
 }
 
 #posts > li.post {
-  padding-top: 0.8rem;
   padding-bottom: 1rem;
 }
 
@@ -186,11 +182,10 @@ div.tags > div.tag:not(:last-child) {
 
 #post-search {
   display: grid;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   width: 50%;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 #post-search > button {
@@ -251,7 +246,34 @@ div.tags > div.tag:not(:last-child) {
 
 #tags > li {
   display: inline;
+  position: relative;
   font-size: 1.3rem;
+  margin-bottom: 1rem;
+}
+
+#tags > li > div.options {
+  position: absolute;
+  display: none;
+  color: #25b3bc;
+  top: -1rem;
+  justify-content: center;
+  left: 0;
+  width: 100%;
+  font-size: 0.8rem;
+}
+
+#tags > li > div.options > span {
+  padding: 0.2rem 0.2rem 0.2rem 0.2rem;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+#tags > li:hover > div.options {
+  display: flex;
+}
+
+#tags > li > div.options > span:hover {
+  opacity: 1;
 }
 
 #tags > li::before {
@@ -313,10 +335,14 @@ div.tags > div.tag:not(:last-child) {
   list-style-type: none;
   position: absolute;
   bottom: 0;
+  padding: 0px;
+  left: 0px;
 }
 
 #pagination > li {
   border-bottom: 1px solid rgba(255, 255, 255, 0);
+  min-width: 0.5rem;
+  text-align: center;
 }
 
 #pagination > li.disabled {
@@ -398,16 +424,15 @@ div.tags > div.tag:not(:last-child) {
   outline: none;
 }
 
-#create-post > button[type=submit] {
+#create-post > a {
   outline: none;
   border: 1px solid #25b3bc;
-  border-radius: 5px;
   background: white;
   color: #25b3bc;
-  padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+  padding: 0.2rem 1.0rem 0.2rem 1.0rem;
 }
 
-#create-post > button[type=submit]:hover {
+#create-post > a:hover {
   background: #25b3bc;
   color: white;
 }
@@ -453,4 +478,117 @@ div.tags > div.tag:not(:last-child) {
 
 #post-detail > #post-body {
   color: #AAA;
+}
+
+#accounts {
+  color: black;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#accounts > ul {
+  list-style-type: none;
+  padding-left: 0px;
+  display: table;
+  margin: 0 auto;
+}
+
+#accounts > ul > li {
+  margin-bottom: 0.6rem;
+}
+
+#accounts > ul > li {
+  padding: 0.2rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+#accounts > ul > li:hover > span.social-contact {
+  color: #25b3bc;
+}
+
+#accounts > ul > li > span.social-name {
+  font-weight: bold;
+  vertical-align: middle;
+  margin-right: 5rem;
+}
+
+#accounts > ul > li > span.social-contact {
+  float: right;
+}
+
+#accounts > ul > li > span.icon-contact {
+  margin-right: 0.6rem;
+  vertical-align: middle;
+  display: inline-block;
+  color: #25b3bc;
+}
+
+#skills {
+  color: black;
+  margin-bottom: 1rem;
+}
+
+#accounts > h3, #about-me > h3, #skills > h3 {
+  margin-bottom: 2rem;
+}
+
+#skills > ul {
+  list-style-type: none;
+  font-size: 1rem;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+}
+
+#skills > ul > li:not(:last-child) {
+  margin-right: 1rem;
+}
+
+#skills > ul > li {
+  border-bottom: 1px solid #25b3bc;
+  padding-bottom: 0.1rem;
+  margin-bottom: 1rem;
+}
+
+#about-me {
+  color: black;
+  font-size: 1rem;
+  margin-bottom: 2rem;
+}
+
+#about-me > div{
+  text-indent: 2rem;
+  margin-left: 2rem;
+}
+
+#edit-tag {
+  margin-bottom: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  width: 20rem;
+}
+
+#edit-tag > input{
+  flex-grow: 1;
+  border: none;
+  border-bottom: 1px solid #25b3bc;
+  box-shadow: none;
+  display: block;
+  margin-right: 1rem;
+}
+
+#edit-tag > a {
+  outline: none;
+  border: 1px solid #25b3bc;
+  background: white;
+  color: #25b3bc;
+  padding: 0rem 1.0rem 0rem 1.0rem;
+  cursor: pointer;
+}
+
+#edit-tag > a:hover {
+  background: #25b3bc;
+  color: white;
 }
