--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -634,3 +634,11 @@ input {
   background-color: var(--color-feature);
   color: white;
 }
+
+#not-found-message {
+  margin: 0;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
