--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -1,4 +1,3 @@
-/* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
@@ -21,8 +20,7 @@
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 }
 
-/* semantic color variables for this project */
-:root {
+/* :root {
   --color-background: var(--vt-c-white);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
@@ -34,9 +32,9 @@
   --color-text: var(--vt-c-text-light-1);
 
   --section-gap: 160px;
-}
+} */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --color-background: var(--vt-c-black);
     --color-background-soft: var(--vt-c-black-soft);
@@ -48,6 +46,26 @@
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
   }
+} */
+
+:root, [theme="light"] {
+  color-scheme: light;  
+  --color-feature: #25b3bc;
+  --color-simple: #aaa;
+  --color-unnoticeble: #e5e7eb;
+  --color-text: #222;
+  --color-background: #fff;
+  --color-background-header: linear-gradient(to bottom, var(--color-background), rgba(255, 255, 255, 0.8));
+}
+
+[theme="dark"] {
+  color-scheme: dark;
+  --color-feature: #44c5cd;
+  --color-simple: #868d9a;
+  --color-unnoticeble: #696e79;
+  --color-text: #e2e3e7;
+  --color-background: rgb(35, 37, 41);
+  --color-background-header: linear-gradient(to bottom, var(--color-background), rgba(35, 37, 41, 0.8));
 }
 
 *,
@@ -72,18 +90,4 @@
 @font-face {
   font-family: "PT-Serif_Regular";
   src: url("fonts/PT-Serif_Regular.ttf") format("opentype");
-}
-
-body {
-  min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
-  transition: color 0.5s, background-color 0.5s;
-  line-height: 1.6;
-  font-family: 'PT-Root-UI_Regular', Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 15px;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
