--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,11 +1,21 @@
 @import "./base.css";
 
+html {
+  font-size: 18px;
+}
 
-:root {
-  --color-feature: #25b3bc;
-  --color-simple: #AAA;
-  --color-unnoticeble: #e5e7eb;
-  --color-text:#222;
+body {
+  min-height: 100vh;
+  color: var(--color-text);
+  background: var(--color-background);
+  transition: color 0.5s, background-color 0.5s;
+  line-height: 1.6;
+  font-family: 'PT-Root-UI_Regular', Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 15px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 header {
@@ -14,8 +24,12 @@ header {
   top: 0;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background: 
-    linear-gradient(to bottom, rgb(255, 255, 255), rgba(255, 255, 255, 0.8));
+  background: var(--color-background-header);
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+  width: calc(70rem - (2rem * 2));
+  margin: 0 auto;
 }
 
 a {
@@ -52,15 +66,19 @@ input:focus-visible {
   outline: none;
 }
 
+input {
+  background: var(--color-background);
+}
+
 input::placeholder {
  color: var(--color-unnoticeble);
 }
 
 #menu {
   list-style-type: none;
-  text-align: center;
   font-size: 1.1rem;
   padding-left: 0rem;
+  margin: 0;
 }
 
 #menu > li {
@@ -82,210 +100,6 @@ input::placeholder {
   padding-left: 2rem;
   position: relative;
   min-height: 80vh;
-}
-
-#posts {
-  margin-left: 1.5rem;
-  padding: 0;
-  /* list-style-type: square; */
-  list-style: none;
-}
-
-#posts > li.post > div.post-title,
-#posts > li.post > div.post-date
-{
-  display: inline;
-}
-
-#posts > li.post > div.post-title {
-  font-size: 1.2rem;
-  color: var(--color-feature);
-  cursor: pointer;
-}
-
-#posts > li.post > div.post-title:hover {
-  filter: brightness(85%);
-}
-
-#posts > li.post > div.separator {
-  display: inline;
-}
-
-#posts > li.post > div.separator::after {
-  color: var(--color-simple);
-  content: "–";
-  margin-right: 1rem;
-  margin-left: 1rem;
-}
-
-#posts > li.post > div.post-date {
-  font-size: 1rem;
-  color: var(--color-simple);
-}
-
-#posts > li.post > div.post-date::after {
-  content: attr(data-date);
-}
-
-#posts > li.post {
-  padding-bottom: 1rem;
-}
-
-#post-detail > div.post-tools {
-  position: absolute;
-  left: 100%;
-  top: 1rem;
-  margin-left: 2rem;
-  opacity: 0;
-}
-
-#post-detail > div.post-tools {
-  transition: 0.5s;
-  opacity: 1;
-}
-
-#post-detail > div.post-tools > a {
-  color: var(--color-feature);
-  border: 1px solid var(--color-feature);
-  border-radius: 5px;
-  cursor: pointer;
-  padding: 0.5rem;
-}
-
-#post-detail > div.post-tools > a:not(:last-child) {
-  margin-right: 1rem;
-}
-
-#posts > li.post > div.category {
-  display: block;
-  font-size: 0.9rem;
-  line-height: 1.3rem;
-  color: var(--color-feature);
-  cursor: pointer;
-}
-
-#posts > li.post > div.category::before {
-  content: "■";
-  font-size: 0.4rem;
-  top: -0.1rem;
-  margin-right: 0.2rem;
-  opacity: 0;
-}
-
-#posts > li.post > div.category:hover::before {
-  opacity: 1;
-}
-
-#posts > li.post > div.category:not(:last-child) {
-  margin-right: 1rem;
-}
-
-#post-search {
-  display: grid;
-  margin-bottom: 1rem;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#post-search > button {
-  background: white;
-  border: none;
-  color: var(--color-feature);
-  font-size: 1.0rem;
-  display: inline;
-}
-
-#post-search > input {
-  flex-grow: 1;
-  border: none;
-  border-bottom: 1px solid var(--color-feature);
-  box-shadow: none;
-}
-
-#post-search > input:disabled {
-  cursor: not-allowed;
-  border-bottom: 1px solid var(--color-simple);
-}
-
-#filter-categories {
-  margin-top: 0.5rem;
-  margin-bottom: 0rem;
-  min-height: 2rem;
-  list-style-type: none;
-  color: var(--color-feature);
-  padding-left: 0rem;
-  font-size: 0.9rem;
-  display: flex;
-}
-
-#filter-categories > li {
-  border: 1px solid var(--color-feature);
-  width: max-content;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  height: 1.6rem;
-}
-
-#filter-categories > li:not(:last-child) {
-  margin-right: 1rem;
-}
-
-#filter-categories > li > span {
-  font-size: 0.5rem;
-  vertical-align: middle;
-  cursor: pointer;
-  padding: 0.2rem;
-}
-
-#categories {
-  flex-wrap: wrap;
-  display: inline-flex;
-  justify-content: center;
-}
-
-#categories > li {
-  display: inline;
-  position: relative;
-  font-size: 1.3rem;
-  margin-bottom: 1rem;
-}
-
-#categories > li > div.options {
-  position: absolute;
-  display: none;
-  color: var(--color-feature);
-  top: -1rem;
-  justify-content: center;
-  left: 0;
-  width: 100%;
-  font-size: 0.8rem;
-}
-
-#categories > li > div.options > span {
-  padding: 0.2rem 0.2rem 0.2rem 0.2rem;
-  cursor: pointer;
-  opacity: 0.5;
-}
-
-#categories > li:hover > div.options {
-  display: flex;
-}
-
-#categories > li > div.options > span:hover {
-  opacity: 1;
-}
-
-#categories > li::before {
-  content: "■";
-  color: var(--color-feature);
-  font-size: 0.4rem;
-  top: -15%;
-  margin-right: 0.2rem;
-}
-
-#categories > li:not(:last-child) {
-  margin-right: 2rem;
 }
 
 #admin-menu {
@@ -326,313 +140,8 @@ input::placeholder {
   color: var(--color-feature);
 }
 
-#pagination {
-  flex-wrap: wrap;
-  width: 100%;
-  display: inline-flex;
-  justify-content: center;
-  color: var(--color-feature);
-  list-style-type: none;
-  position: absolute;
-  bottom: 0;
-  padding: 0px;
-  left: 0px;
-}
-
-#pagination > li {
-  border-bottom: 1px solid rgba(255, 255, 255, 0);
-  min-width: 0.5rem;
-  text-align: center;
-}
-
-#pagination > li.disabled {
-  color: var(--color-simple);
-  cursor: default;
-}
-
-#pagination > li::after {
-  content: attr(data-content);
-}
-
-#pagination > li.active {
-  border-bottom: 1px solid var(--color-feature);
-}
-
-#pagination > li:not(:last-child){
-  margin-right: 1rem;
-}
-
-#pagination > li:hover:not(.disabled) {
-  border-bottom: 1px solid var(--color-feature);
-  cursor: pointer;
-}
-
-#button-add-post {
-  position: absolute;
-  left: 0rem;
-  top: 0rem;
-  font-size: 1.5rem;
-  margin-bottom: 1px;
-
-  border: 1px solid var(--color-feature);
-  width: 1.7rem;
-  height: 1.7rem;
-  border-radius: 50%;
-  color: var(--color-feature);
-  padding-bottom: 0.25rem;
-  
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#button-add-post:hover {
-  background-image: none;
-}
-
-#button-add-post::before {
-  content: "+";
-}
-
-#create-post {
-  width: 100%;
-}
-
-#create-post > div > #post-title {
-  flex-grow: 1;
-  border: none;
-  border-bottom: 1px solid var(--color-feature);
-  box-shadow: none;
-  width: 100%;
-  outline: none;
-  position: relative;
-}
-
-#create-post label {
-  color: var(--color-simple);
-}
-
-#create-post > div {
-  margin-bottom: 2rem;
-}
-
-#create-post > #post-body {
-  border: 1px solid var(--color-feature);
-  box-shadow: none;
-  flex-grow: 1;
-  width: 100%;
-  outline: none;
-}
-
-#create-post > a {
-  outline: none;
-  border: 1px solid var(--color-feature);
-  background: white;
-  color: var(--color-feature);
-  padding: 0.2rem 1.0rem 0.2rem 1.0rem;
-}
-
-#create-post > a:hover {
-  background: var(--color-feature);
-  color: white;
-}
-
-#post-category > label {
-  margin-right: 1rem;
-}
-
-#post-category > select {
-  outline: none;
-  border: none;
-  background: white;
-  border-bottom: 1px solid var(--color-feature);
-}
-
-#post-detail > #post-title {
-  color: var(--color-feature);
-  text-align: center;
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-}
-
-#post-detail > #post-categories {
-  color: var(--color-feature);
-  list-style-type: none;
-
-  flex-wrap: wrap;
-  display: inline-flex;
-  justify-content: center;
-  padding: 0rem;
-  width: 100%;
-  margin-bottom: 2rem;
-}
-
-#post-detail > #post-categories > li {
-  cursor: pointer;
-}
-
-#post-detail > #post-categories > li::before {
-  content: "■";
-  font-size: 0.6rem;
-  top: -0.2rem;
-  margin-right: 0.2rem;
-  opacity: 0;
-}
-
-#post-detail > #post-categories > li:hover::before {
-  opacity: 1;
-}
-
-#post-detail > #post-categories > li:not(:last-child) {
-  margin-right: 1rem;
-}
-
-#post-detail > #post-body {
-  color: var(--color-simple);
-}
-
-#accounts {
-  color: var(--color-text);
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#accounts > ul {
-  list-style-type: none;
-  padding-left: 0px;
-  display: table;
-  margin: 0 auto;
-}
-
-#accounts > ul > li {
-  margin-bottom: 0.6rem;
-}
-
-#accounts > ul > li {
-  padding: 0.2rem;
-  font-size: 1rem;
-  cursor: pointer;
-}
-
-#accounts > ul > li:hover > span.social-contact {
-  color: var(--color-feature);
-}
-
-#accounts > ul > li > span.social-name {
-  font-weight: bold;
-  vertical-align: middle;
-  margin-right: 5rem;
-}
-
-#accounts > ul > li > span.social-contact {
-  float: right;
-}
-
-#accounts > ul > li > span.icon-contact {
-  margin-right: 0.6rem;
-  vertical-align: middle;
-  display: inline-block;
-  color: var(--color-feature);
-}
-
-#skills {
-  color: var(--color-text);
-  margin-bottom: 1rem;
-}
-
-#accounts > h3, #about-me > h3, #skills > h3 {
-  margin-bottom: 2rem;
-}
-
-#skills > ul {
-  list-style-type: none;
-  font-size: 1rem;
-  flex-wrap: wrap;
-  display: flex;
-  justify-content: center;
-}
-
-#skills > ul > li:not(:last-child) {
-  margin-right: 1rem;
-}
-
-#skills > ul > li {
-  border-bottom: 1px solid var(--color-feature);
-  padding-bottom: 0.1rem;
-  margin-bottom: 1rem;
-}
-
-#about-me {
-  color: var(--color-text);
-  font-size: 1rem;
-  margin-bottom: 2rem;
-}
-
-#about-me > div{
-  text-indent: 2rem;
-  margin-left: 2rem;
-}
-
-#edit-category {
-  margin-bottom: 2rem;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  width: 20rem;
-}
-
-#edit-category > input{
-  flex-grow: 1;
-  border: none;
-  border-bottom: 1px solid var(--color-feature);
-  box-shadow: none;
-  display: block;
-  margin-right: 1rem;
-}
-
-#edit-category > a {
-  outline: none;
-  border: 1px solid var(--color-feature);
-  background: white;
-  color: var(--color-feature);
-  padding: 0rem 1.0rem 0rem 1.0rem;
-  cursor: pointer;
-}
-
-#edit-category > a:hover {
-  background: var(--color-feature);
-  color: white;
-}
-
 input {
   border: 1px solid var(--color-feature);
-}
-
-#login {
-  width: 20rem;
-  display: block;
-  margin: 0 auto;
-}
-
-#login > label {
-  color: var(--color-simple)
-}
-
-#login > * {
-  display: block;
-  width: 100%;
-}
-
-#login > button {
-  margin-top: 1rem;
-  background-color: white;
-  border: 1px solid var(--color-feature);
-  color: var(--color-feature);
-}
-
-#login > button:hover {
-  background-color: var(--color-feature);
-  color: white;
 }
 
 #not-found-message {
@@ -642,3 +151,16 @@ input {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+#change-theme {
+  border: 1px solid var(--color-feature);
+  border-radius: 5px;
+  padding: 0.3rem;
+  color: var(--color-feature);
+  cursor: pointer;
+  /* font-size: 1rem; */
+  height: fit-content;
+  right: 0;
+  position: absolute;
+}
+
