--- a/frontend/src/views/blog/blog.css
+++ b/frontend/src/views/blog/blog.css
@@ -166,9 +166,8 @@
 }
 
 #posts {
-  margin-left: 1.5rem;
   padding: 0;
-  /* list-style-type: square; */
+  margin: 0;
   list-style: none;
 }
 
@@ -183,9 +182,9 @@
   cursor: pointer;
 }
 
-#posts > li.post > div.post-title:hover {
+/* #posts > li.post > div.post-title:hover {
   filter: brightness(85%);
-}
+} */
 
 #posts > li.post > div.separator {
   display: inline;
@@ -242,14 +241,15 @@
   line-height: 1.3rem;
   color: var(--color-feature);
   cursor: pointer;
+  width: fit-content;
 }
 
 #posts > li.post > div.category::before {
-  content: "■";
-  font-size: 0.4rem;
-  top: -0.1rem;
+  content: "-"; 
   margin-right: 0.2rem;
-  opacity: 0;
+  /* font-size: 0.4rem;
+  top: -0.1rem;
+  opacity: 0; */
 }
 
 #posts > li.post > div.category:hover::before {
