Disabled show draft posts for anonimous users

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -41,6 +41,10 @@ a:hover {
   color: var(--color-feature);
 }
 
+label {
+  color: var(--color-simple);
+}
+
 .underline-decoration:hover {
   color: var(--color-feature);
   background-size: 100% 1px;
