--- a/frontend/src/views/blog/blog.css
+++ b/frontend/src/views/blog/blog.css
@@ -14,10 +14,6 @@
   position: relative;
 }
 
-#create-post label {
-  color: var(--color-simple);
-}
-
 #create-post > div {
   margin-bottom: 2rem;
 }
@@ -43,11 +39,11 @@
   color:  var(--color-background);
 }
 
-#post-category > label {
+.select > label {
   margin-right: 1rem;
 }
 
-#post-category > select {
+.select > select {
   outline: none;
   border: none;
   background:  var(--color-background);
@@ -172,8 +168,33 @@
 }
 
 #posts > li.post > div.post-title,
-#posts > li.post > div.post-date {
+#posts > li.post > div.post-date,
+#posts > li.post > div.post-draft {
   display: inline;
+}
+
+#posts > li.post > div.post-draft {
+  margin-left: 1rem;
+  color: var(--color-simple);
+}
+
+[data-tooltip]:hover::after {
+  opacity: 1;
+  transition: .15s;
+  transition-delay: 0.30s;
+}
+
+[data-tooltip]::after {
+  content: attr(data-tooltip); /* Выводим текст */
+  pointer-events: none;
+  opacity: 0;
+  transition: .15s;
+  border: 1px solid var(--color-simple);
+  padding: 0.0rem 0.5rem 0.1rem 0.5rem;
+  position: absolute;
+  font-size: 0.8rem;
+  margin-left: 0.5rem;
+  margin-top: -0.5rem;
 }
 
 #posts > li.post > div.post-title {
@@ -316,4 +337,32 @@
   vertical-align: middle;
   cursor: pointer;
   padding: 0.2rem;
+}
+
+#post-edit-options > input[type="checkbox"] {
+  margin-right: 0.2rem;
+}
+
+#post-edit-options {
+  text-align: end;
+}
+
+#post-options {
+  display: flex;
+}
+
+#post-options > div:not(:last-child)::after {
+  content: "|";
+  color: var(--color-unnoticeble);
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
+
+}
+
+.checkbox > input[type="checkbox"] {
+  margin-right: 0.2rem;
+}
+
+.checkbox > label {
+  color: var(--color-text);
 }
