--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -22,14 +22,15 @@ header {
   position: sticky;
   z-index: 10;
   top: 0;
-  padding-top: 3rem;
-  padding-bottom: 4rem;
   background: var(--color-background-header);
   display: flex;
   justify-content: center;
   margin-bottom: 1rem;
-  width: var(--width-content);
   margin: 0 auto;
+  max-width: var(--width-content);
+  padding: var(--padding-content);
+  padding-top: 3rem;
+  padding-bottom: 4rem;
 }
 
 a {
@@ -106,9 +107,9 @@ input::placeholder {
 
 #content {
   max-width: var(--width-content);
-  margin-right: auto;
-  margin-left: auto;
+  padding: var(--padding-content);
   position: relative;
+  margin: 0 auto;
   min-height: 80vh;
 }
 
@@ -164,14 +165,13 @@ input {
 
 #change-theme {
   border: 1px solid var(--color-feature);
-  /* border-radius: 5px; */
   padding: 0.3rem;
   color: var(--color-background);
   background: var(--color-feature);
   cursor: pointer;
   font-size: 1rem;
   height: fit-content;
-  left: 0;
+  left: 2rem;
   position: absolute;
   transition: 0.10s;
 }
