--- a/frontend/src/views/blog/blog.css
+++ b/frontend/src/views/blog/blog.css
@@ -302,6 +302,7 @@
   border: none;
   border-bottom: 1px solid var(--color-feature);
   box-shadow: none;
+  min-width: 5rem;
 }
 
 #post-search > input:disabled {
@@ -356,7 +357,6 @@
   color: var(--color-unnoticeble);
   margin-right: 0.5rem;
   margin-left: 0.5rem;
-
 }
 
 .checkbox > input[type="checkbox"] {
@@ -365,4 +365,14 @@
 
 .checkbox > label {
   color: var(--color-text);
+}
+
+@media only screen and (max-width: 640px) {
+  #posts > li.post > div.separator{
+    display: none;
+  }
+
+  #posts > li.post > div.post-date::after {
+    display: block;
+  }
 }
