Made cursor pointer for login button

--- a/frontend/src/views/auth/auth.css
+++ b/frontend/src/views/auth/auth.css
@@ -20,6 +20,7 @@
     background-color:  var(--color-background);
     border: 1px solid var(--color-feature);
     color: var(--color-feature);
+    cursor: pointer;
   }
   
   #login > button:hover {
