--- a/frontend/src/views/blog/blog.css
+++ b/frontend/src/views/blog/blog.css
@@ -24,7 +24,6 @@
   flex-grow: 1;
   width: 100%;
   outline: none;
-  z-index: 1;
 }
 
 #create-post > a {
@@ -56,6 +55,8 @@
   text-align: center;
   font-size: 1.5rem;
   margin-bottom: 1rem;
+  width: fit-content;
+  margin: 0 auto;
 }
 
 #post-detail > #post-categories {
@@ -232,28 +233,21 @@
   padding-bottom: 1rem;
 }
 
-#post-detail > div.post-tools {
+div.post-tools {
   position: absolute;
-  left: 100%;
-  top: 1rem;
-  margin-left: 2rem;
-  opacity: 0;
+  top: 0rem;
+  right: -5rem;
 }
 
-#post-detail > div.post-tools {
-  transition: 0.5s;
-  opacity: 1;
-}
-
-#post-detail > div.post-tools > a {
+div.post-tools > a {
   color: var(--color-feature);
   border: 1px solid var(--color-feature);
-  border-radius: 5px;
   cursor: pointer;
-  padding: 0.5rem;
+  font-size: 0.8rem;
+  padding: 0.2rem;
 }
 
-#post-detail > div.post-tools > a:not(:last-child) {
+div.post-tools > a:not(:last-child) {
   margin-right: 1rem;
 }
 
