--- a/frontend/src/views/blog/blog.css
+++ b/frontend/src/views/blog/blog.css
@@ -303,7 +303,7 @@ div.post-tools > a:not(:last-child) {
   color: var(--color-text);
 }
 
-#post-search > input::-moz-placeholder, input::-webkit-input-placeholder {
+#post-search > input::-moz-placeholder {
   color: var(--color-simple);
 }
 
