--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -33,6 +33,10 @@ header {
   padding-bottom: 4rem;
 }
 
+::selection {
+  background: #44c5cd80;
+}
+
 #toolbar {
   width: var(--width-content);
   display: inline-flex;
