--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -198,6 +198,10 @@ input {
   transform: translate(-50%, -50%);
 }
 
+#menu-burger {
+  display: none;
+}
+
 
 #change-theme {
   padding: 0;
@@ -255,9 +259,28 @@ input {
 
   #toolbar {
     padding: 0;
+    min-height: 1.8rem;
   }
 
   #change-theme {
     left: 0;
+  }
+
+  #menu-burger {
+    display: block;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+    right: 0rem;
+    position: absolute; 
+  }
+
+  #menu-burger > div {
+    border: 1px solid var(--color-feature); 
+    color: var(--color-background);
+    background: var(--color-feature);
+    padding: 0.3rem;
+    font-size: 1rem;
+    height: fit-content;
   }
 }
