--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -226,11 +226,11 @@ input {
   transition: .10s;
 }
 
-.icon-moon-o::before {
-    aspect-ratio: 1 / 1;
-    display: block;
-    text-align: center;
-    width: 1rem;
+.square-icon::before {
+  aspect-ratio: 1 / 1;
+  display: block;
+  text-align: center;
+  width: 1rem;
 }
 
 @media only screen and (max-width: 640px) {
@@ -272,7 +272,7 @@ input {
     margin: 0;
     cursor: pointer;
     right: 0rem;
-    position: absolute; 
+    position: absolute;
   }
 
   #menu-burger > div {
